bug#57032 a01_patch.diff check cases in "hash index scan"